# certs

./: .gitignore  Cargo.toml  README.md  flake.nix
assets/: Untitled spreadsheet - Sheet1.csv  one.csv  template1.jpg~  test.csv
src/: lib.rs  main.rs
